<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".authentis.UI.choixID_Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
    <ImageView
        android:id="@+id/authentis"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:onClick="ClickLogo"
        android:src="@drawable/authentis"/>
        <TextView
            android:id="@+id/reglages"
            android:layout_width="wrap_content"
            android:layout_below="@id/authentis"
            android:layout_height="wrap_content"
            android:text="@string/title_reglages"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>
    <View
        android:id="@+id/barre"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/reglages"
        android:background="@color/menutextcolor"/>


        <LinearLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_below="@id/barre"
            android:background="@drawable/settings_barre"
            android:onClick="ClickProfile">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/account"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/account"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/settings_barre"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="ClickNotifications"
            android:layout_below="@id/account">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/notification"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Notifications"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/langages"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/settings_barre"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="ClickLangues"
            android:layout_below="@+id/notifications">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/translate"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Langues"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/settings_barre"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="ClickFAQ"
            android:layout_below="@+id/langages">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/help"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/FAQ"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/settings_barre"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="ClickContactUs"
            android:layout_below="@+id/faq">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/contact"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ContactUS"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/settings_barre"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:onClick="ClickAboutUs"
            android:layout_below="@+id/contact">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/aboutus"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/AboutUs"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Logout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/settings_barre"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/aboutus">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/turnoff"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/Logout"
                android:textColor="@color/black" />
        </LinearLayout>

    <ImageView
        android:id="@+id/buttom_bar"
        android:layout_width="250dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00FFFFFF"
        android:src="@drawable/buttom_bar" />
    </RelativeLayout>
</LinearLayout>